--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.20.0",
     "socket.io-client": "^4.7.2"
   },
