--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.12.0",
     "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.20.0",
+    "recordrtc": "^5.6.2",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
