--- a/front/package.json
+++ b/front/package.json
@@ -24,8 +24,10 @@
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
+    "@types/node": "^20.9.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/recordrtc": "^5.6.14",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
