--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@types/react-router-dom": "^5.3.3",
+    "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -24,6 +25,7 @@
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
+    "@types/luxon": "^3.3.5",
     "@types/node": "^20.9.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
