--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@types/react-router-dom": "^5.3.3",
+    "antd": "^5.11.5",
     "luxon": "^3.4.4",
+    "peerjs": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
