--- a/front/package.json
+++ b/front/package.json
@@ -2,9 +2,12 @@
   "name": "front",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://letmedream.github.io/Another-Chat-FE/",
   "type": "module",
   "scripts": {
     "dev": "vite --host 0.0.0.0",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -39,6 +42,7 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "gh-pages": "^6.1.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
