Revert package.json homepage property and delete internal repo (in the front folder)

--- a/front/package.json
+++ b/front/package.json
@@ -2,7 +2,7 @@
   "name": "front",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://letmedream.github.io/Another-Chat-FE/",
+  "homepage": "",
   "type": "module",
   "scripts": {
     "dev": "vite --host 0.0.0.0",
